# SecPack

./: CMakeLists.txt  LICENSE  README.md
gui/: MainWindow.cpp  MainWindow.hpp  main.cpp
include/: compress.hpp  crypto.hpp  tar.hpp
src/: compress.cpp  crypto.cpp  main.cpp  tar.cpp
